adding program_counter module along with testbench

--- a/tb/Makefile.program_counter
+++ b/tb/Makefile.program_counter
@@ -4,13 +4,13 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 
-VERILOG_SOURCES += ../rtl/instruction_memory.v
+VERILOG_SOURCES += ../rtl/program_counter.v
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
-TOPLEVEL = instruction_memory
+TOPLEVEL = program_counter
 
 # MODULE is the basename of the Python test file
-MODULE = test_instruction_memory
+MODULE = test_program_counter
 
 # include cocotb's make rules to take care of the simulator setup
 include $(shell cocotb-config --makefiles)/Makefile.sim
